--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,94 +9,118 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/ivLogo"
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/logo_height"
-            android:layout_margin="@dimen/activity_margin"
-            android:src="@drawable/famdent_logo"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/ivLogo"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/logo_height"
+                android:layout_margin="@dimen/activity_margin"
+                android:src="@drawable/famdent_logo"/>
 
 
-        <EditText
-            android:id="@+id/etName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_margin_small"
-            android:layout_marginLeft="@dimen/activity_margin"
-            android:layout_marginRight="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_margin_small"
-            android:background="@drawable/edit_text_background"
-            android:hint="@string/activity_login_hint_full_name"
-            android:padding="@dimen/edittext_padding"
-            android:textSize="@dimen/text_size_large"/>
+            <EditText
+                android:id="@+id/etName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_margin_small"
+                android:layout_marginLeft="@dimen/activity_margin"
+                android:layout_marginRight="@dimen/activity_margin"
+                android:layout_marginTop="@dimen/activity_margin_small"
+                android:background="@drawable/edit_text_background"
+                android:hint="@string/activity_login_hint_full_name"
+                android:padding="@dimen/edittext_padding"
+                android:textSize="@dimen/text_size_large"/>
 
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_margin_small"
-            android:layout_marginLeft="@dimen/activity_margin"
-            android:layout_marginRight="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_margin_small"
-            android:background="@drawable/edit_text_background"
-            android:hint="@string/activity_login_hint_email"
-            android:inputType="textEmailAddress"
-            android:padding="@dimen/edittext_padding"
-            android:textSize="@dimen/text_size_large"/>
+            <EditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_margin_small"
+                android:layout_marginLeft="@dimen/activity_margin"
+                android:layout_marginRight="@dimen/activity_margin"
+                android:layout_marginTop="@dimen/activity_margin_small"
+                android:background="@drawable/edit_text_background"
+                android:hint="@string/activity_login_hint_email"
+                android:inputType="textEmailAddress"
+                android:padding="@dimen/edittext_padding"
+                android:textSize="@dimen/text_size_large"/>
 
-        <EditText
-            android:id="@+id/etMobile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_margin_small"
-            android:layout_marginLeft="@dimen/activity_margin"
-            android:layout_marginRight="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_margin_small"
-            android:background="@drawable/edit_text_background"
-            android:hint="@string/activity_login_hint_mobile"
-            android:inputType="number"
-            android:maxLength="10"
-            android:padding="@dimen/edittext_padding"
-            android:textSize="@dimen/text_size_large"/>
+            <EditText
+                android:id="@+id/etMobile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_margin_small"
+                android:layout_marginLeft="@dimen/activity_margin"
+                android:layout_marginRight="@dimen/activity_margin"
+                android:layout_marginTop="@dimen/activity_margin_small"
+                android:background="@drawable/edit_text_background"
+                android:hint="@string/activity_login_hint_mobile"
+                android:inputType="number"
+                android:maxLength="10"
+                android:padding="@dimen/edittext_padding"
+                android:textSize="@dimen/text_size_large"/>
 
-        <Spinner
-            android:id="@+id/spType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_margin_small"
-            android:layout_marginLeft="@dimen/activity_margin"
-            android:layout_marginRight="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_margin_small"
-            android:background="@drawable/edit_text_background"
-            android:hint="Type"
-            android:padding="@dimen/edittext_padding"
-            android:spinnerMode="dialog"/>
+            <Spinner
+                android:id="@+id/spType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_margin_small"
+                android:layout_marginLeft="@dimen/activity_margin"
+                android:layout_marginRight="@dimen/activity_margin"
+                android:layout_marginTop="@dimen/activity_margin_small"
+                android:background="@drawable/edit_text_background"
+                android:hint="Type"
+                android:padding="@dimen/edittext_padding"
+                android:spinnerMode="dialog"/>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_margin_small"
+                android:layout_marginLeft="@dimen/activity_margin"
+                android:layout_marginRight="@dimen/activity_margin"
+                android:layout_marginTop="@dimen/activity_margin_small"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvSubmit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_margin_small"
-            android:layout_marginLeft="@dimen/activity_margin"
-            android:layout_marginRight="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_margin_small"
-            android:background="@drawable/button_bg"
-            android:elevation="@dimen/button_elevation"
-            android:gravity="center"
-            android:padding="@dimen/activity_margin"
-            android:text="@string/activity_login_button_submit"
-            android:textColor="@color/text_color_white"
-            android:textSize="@dimen/text_size_extra_large"/>
+                <CheckBox
+                    android:id="@+id/cbTerm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"/>
 
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tvTermConditions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/cbTerm"
+                    android:layout_toRightOf="@+id/cbTerm"/>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tvSubmit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_margin_small"
+                android:layout_marginLeft="@dimen/activity_margin"
+                android:layout_marginRight="@dimen/activity_margin"
+                android:layout_marginTop="@dimen/activity_margin_small"
+                android:background="@drawable/button_bg"
+                android:elevation="@dimen/button_elevation"
+                android:gravity="center"
+                android:padding="@dimen/activity_margin"
+                android:text="@string/activity_login_button_submit"
+                android:textColor="@color/text_color_white"
+                android:textSize="@dimen/text_size_extra_large"/>
+
+
+        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/rlFooter"
