Started with integrating APIs

--- a/app/src/main/res/layout/activity_programme_list.xml
+++ b/app/src/main/res/layout/activity_programme_list.xml
@@ -98,8 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/appBar"
             android:layout_centerInParent="true"
-            android:animateLayoutChanges="true"
-        >
+            android:animateLayoutChanges="true">
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/swipeRefreshLayout"
