--- a/app/src/main/res/layout/activity_programme_detail.xml
+++ b/app/src/main/res/layout/activity_programme_detail.xml
@@ -90,7 +90,7 @@
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewpager"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
+                    android:layout_height="100dp"
                     android:visibility="visible"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
                 <LinearLayout
@@ -98,8 +98,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/viewpager"
-                    android:layout_marginBottom="@dimen/activity_margin_small"
-                    android:layout_marginTop="@dimen/activity_margin_small"
+                    android:layout_centerVertical="true"
                     android:gravity="center"
                     android:orientation="horizontal"/>
                 <RelativeLayout
