--- a/app/src/main/res/layout/list_item_exhibitor.xml
+++ b/app/src/main/res/layout/list_item_exhibitor.xml
@@ -38,37 +38,15 @@
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/tvHallNumber"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/llStallDetails"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvExhibitorName"
-            android:text="Hall 1"
-            android:textColor="@color/app_text_color_light"
-            android:textSize="@dimen/text_size_small"/>
 
-        <View
-            android:id="@+id/view1"
-            android:layout_width="1dp"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvHallNumber"
-            android:layout_alignTop="@id/tvHallNumber"
-            android:layout_marginLeft="@dimen/activity_margin_small"
-            android:layout_marginRight="@dimen/activity_margin_small"
-            android:layout_toEndOf="@id/tvHallNumber"
-            android:layout_toRightOf="@+id/tvHallNumber"
-            android:background="@color/app_text_color_light"/>
+            android:orientation="horizontal"/>
 
-        <TextView
-            android:id="@+id/tvStallNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvExhibitorName"
-            android:layout_toEndOf="@id/view1"
-            android:layout_toRightOf="@+id/view1"
-            android:text="Stall 10"
-            android:textColor="@color/app_text_color_light"
-            android:textSize="@dimen/text_size_small"/>
+
     </RelativeLayout>
 
 
