--- a/app/src/main/res/layout/activity_programme_detail.xml
+++ b/app/src/main/res/layout/activity_programme_detail.xml
@@ -87,11 +87,119 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <RelativeLayout
+                    android:id="@+id/rl0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_margin_small">
+                    <RelativeLayout
+                        android:id="@+id/rlImage"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/ivSpeakerImage"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:background="@drawable/round_outline"
+                            android:scaleType="centerCrop"/>
+                        <ProgressBar
+                            android:id="@+id/progressBar"
+                            style="?android:attr/progressBarStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:visibility="visible"/>
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/rr3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/rlImage"
+                        android:layout_alignTop="@+id/rlImage"
+                        android:layout_marginLeft="@dimen/activity_margin_small"
+                        android:layout_marginStart="@dimen/activity_margin_small"
+                        android:layout_toEndOf="@+id/rlImage"
+                        android:layout_toRightOf="@+id/rlImage">
+
+                        <TextView
+                            android:id="@+id/tvSpeakerName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Dr.Rahul Jain"
+                            android:textColor="@color/app_text_color_dark"
+                            android:textSize="@dimen/text_size_large"
+                            android:textStyle="bold"/>
+                        <!--
+                                                <com.actiknow.famdent.utils.ExpandableTextView
+                                                    android:id="@+id/tvSpeakerQualification"
+                                                    android:layout_width="fill_parent"
+                                                    android:layout_height="wrap_content"
+                                                    android:layout_below="@+id/tvSpeakerName"
+                                                    android:text="BDS, MDS - Oral and Maxillofacial Surgery"
+                                                    android:textColor="@color/app_text_color_light"
+                                                    android:textSize="@dimen/text_size_extra_small"/>
+                                                -->
+                        <TextView
+                            android:id="@+id/tvSpeakerQualification"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/tvSpeakerName"
+                            android:ellipsize="end"
+                            android:maxLines="5"
+                            android:text="BDS, MDS - Oral and Maxillofacidal Surgery"
+                            android:textColor="@color/app_text_color_light"
+                            android:textSize="@dimen/text_size_extra_small"/>
+
+                        <!--
+
+                        <TextView
+                            android:id="@+id/tvSpeakerQualification"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tvSpeakerName"
+                            android:text="BDS, MDS - Oral and Maxillofacial Surgery"
+                            android:textColor="@color/app_text_color_light"
+                            android:textSize="@dimen/text_size_medium"/>
+
+                        -->
+                        <TextView
+                            android:id="@+id/tvExp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tvSpeakerQualification"
+                            android:text="Experience:"
+                            android:textColor="@color/app_text_color_light"
+                            android:textSize="@dimen/text_size_medium"
+                            android:visibility="gone"/>
+                        <TextView
+                            android:id="@+id/tvExperience"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/tvSpeakerQualification"
+                            android:layout_marginLeft="@dimen/activity_margin_extra_small"
+                            android:layout_marginStart="@dimen/activity_margin_extra_small"
+                            android:layout_toEndOf="@+id/tvExp"
+                            android:layout_toRightOf="@+id/tvExp"
+                            android:text="9 Years"
+                            android:textColor="@color/app_text_color_light"
+                            android:textSize="@dimen/text_size_medium"
+                            android:visibility="gone"/>
+
+
+                    </RelativeLayout>
+
+
+                </RelativeLayout>
+
+
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewpager"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
                 <LinearLayout
                     android:id="@+id/layoutDots"
@@ -100,14 +208,15 @@
                     android:layout_below="@+id/viewpager"
                     android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:orientation="horizontal"/>
+                    android:orientation="horizontal"
+                    android:visibility="gone"/>
                 <RelativeLayout
                     android:id="@+id/rl1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/layoutDots"
+                    android:layout_below="@+id/rl0"
                     android:layout_marginLeft="@dimen/activity_margin_small"
                     android:layout_marginRight="@dimen/activity_margin_small"
                 >
@@ -304,6 +413,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tvFees"
+                        android:layout_marginBottom="@dimen/activity_margin"
                         android:layout_marginTop="@dimen/activity_margin_small"
                         android:layout_toEndOf="@+id/ivFees"
                         android:layout_toRightOf="@+id/ivFees"
@@ -324,7 +434,9 @@
                 android:id="@+id/tvAddFavourite"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_margin_small"
+                android:layout_marginBottom="@dimen/activity_margin_small"
+                android:layout_marginLeft="@dimen/activity_margin_small"
+                android:layout_marginRight="@dimen/activity_margin_small"
                 android:layout_weight="1.0"
                 android:background="@drawable/button_bg"
                 android:elevation="@dimen/button_elevation"
