--- a/app/src/main/res/layout/activity_session_detail.xml
+++ b/app/src/main/res/layout/activity_session_detail.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="@color/app_background"
->
+    android:background="@color/app_background">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,7 +20,6 @@
             android:animateLayoutChanges="true"
             android:theme="@style/AppTheme.AppBarOverlay"
             android:visibility="visible">
-
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar1"
                 style="@style/Widget.MyApp.ActionBar"
@@ -35,7 +33,6 @@
                     android:id="@+id/toolbar_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
                     <ImageView
                         android:id="@+id/ivBack"
                         android:layout_width="wrap_content"
@@ -47,7 +44,6 @@
                         android:paddingTop="@dimen/activity_margin_small"
                         android:src="@drawable/ic_back"
                         android:visibility="visible"/>
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -59,7 +55,7 @@
                         android:layout_toRightOf="@+id/ivBack"
                         android:layout_toStartOf="@+id/ivFavourite"
                         android:gravity="left"
-                        android:text="@string/activity_programme_detail_title"
+                        android:text="@string/activity_session_detail_title"
                         android:textColor="@color/text_color_white"
                         android:textSize="@dimen/text_size_large"
                         android:textStyle="bold"/>
@@ -72,7 +68,6 @@
                         android:layout_centerVertical="true"
                         android:src="@drawable/ic_star_border"
                         android:visibility="visible"/>
-
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
 
@@ -88,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/llButtons"
                 android:layout_alignParentTop="true">
+
                 <RelativeLayout
                     xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
@@ -102,13 +98,16 @@
                         <RelativeLayout
                             android:id="@+id/rlImage"
                             android:layout_width="100dp"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:visibility="gone">
+
                             <ImageView
                                 android:id="@+id/ivSpeakerImage"
                                 android:layout_width="match_parent"
                                 android:layout_height="100dp"
                                 android:background="@drawable/round_outline"
                                 android:scaleType="centerCrop"/>
+
                             <ProgressBar
                                 android:id="@+id/progressBar"
                                 style="?android:attr/progressBarStyleSmall"
@@ -118,7 +117,6 @@
                                 android:visibility="visible"/>
 
                         </RelativeLayout>
-
                         <RelativeLayout
                             android:id="@+id/rr3"
                             android:layout_width="wrap_content"
@@ -129,48 +127,26 @@
                             android:layout_marginStart="@dimen/activity_margin_small"
                             android:layout_toEndOf="@+id/rlImage"
                             android:layout_toRightOf="@+id/rlImage">
-
                             <TextView
-                                android:id="@+id/tvSpeakerName"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/tvSessionTitle"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Dr.Rahul Jain"
+                                android:gravity="center"
+                                android:text="Session Title"
                                 android:textColor="@color/app_text_color_dark"
                                 android:textSize="@dimen/text_size_large"
-                                android:textStyle="bold"/>
-                            <!--
-                                                    <com.actiknow.famdent.utils.ExpandableTextView
-                                                        android:id="@+id/tvSpeakerQualification"
-                                                        android:layout_width="fill_parent"
-                                                        android:layout_height="wrap_content"
-                                                        android:layout_below="@+id/tvSpeakerName"
-                                                        android:text="BDS, MDS - Oral and Maxillofacial Surgery"
-                                                        android:textColor="@color/app_text_color_light"
-                                                        android:textSize="@dimen/text_size_extra_small"/>
-                                                    -->
+                                android:textStyle="bold"
+                                android:visibility="visible"/>
                             <TextView
-                                android:id="@+id/tvSpeakerQualification"
-                                android:layout_width="fill_parent"
+                                android:id="@+id/tvSpeakerName"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@+id/tvSpeakerName"
-                                android:ellipsize="end"
-                                android:maxLines="5"
-                                android:text="BDS, MDS - Oral and Maxillofacidal Surgery"
-                                android:textColor="@color/app_text_color_light"
-                                android:textSize="@dimen/text_size_extra_small"/>
-
-                            <!--
-
-                            <TextView
-                                android:id="@+id/tvSpeakerQualification"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/tvSpeakerName"
-                                android:text="BDS, MDS - Oral and Maxillofacial Surgery"
-                                android:textColor="@color/app_text_color_light"
+                                android:layout_below="@+id/tvSessionTitle"
+                                android:layout_marginTop="@dimen/activity_margin_small"
+                                android:gravity="end"
+                                android:text="Dr.Rahul Jain"
+                                android:textColor="@color/app_text_color_dark"
                                 android:textSize="@dimen/text_size_medium"/>
-
-                            -->
                             <TextView
                                 android:id="@+id/tvExp"
                                 android:layout_width="wrap_content"
@@ -193,14 +169,10 @@
                                 android:textColor="@color/app_text_color_light"
                                 android:textSize="@dimen/text_size_medium"
                                 android:visibility="gone"/>
-
-
                         </RelativeLayout>
 
 
                     </RelativeLayout>
-
-
                     <android.support.v4.view.ViewPager
                         android:id="@+id/viewpager"
                         android:layout_width="match_parent"
@@ -216,6 +188,7 @@
                         android:gravity="center"
                         android:orientation="horizontal"
                         android:visibility="gone"/>
+
                     <RelativeLayout
                         android:id="@+id/rl1"
                         android:layout_width="match_parent"
@@ -224,8 +197,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_below="@+id/rl0"
                         android:layout_marginLeft="@dimen/activity_margin_small"
-                        android:layout_marginRight="@dimen/activity_margin_small"
-                    >
+                        android:layout_marginRight="@dimen/activity_margin_small">
 
                         <ImageView
                             android:id="@+id/ivServiceIcon"
@@ -234,6 +206,7 @@
                             android:background="@color/text_color_white"
                             android:padding="@dimen/activity_margin_small"
                             android:src="@drawable/ic_list"/>
+
                         <TextView
                             android:id="@+id/tvServiceName"
                             android:layout_width="match_parent"
@@ -261,8 +234,7 @@
                             android:layout_marginTop="@dimen/activity_margin_small"
                             android:layout_toEndOf="@+id/ivServiceIcon"
                             android:layout_toRightOf="@+id/ivServiceIcon"
-                            android:orientation="vertical">
-                        </LinearLayout>
+                            android:orientation="vertical"></LinearLayout>
                         <!--
                                         <TextView
                                             android:id="@+id/tvImpaction"
@@ -304,6 +276,7 @@
 
                                         -->
                     </RelativeLayout>
+
                     <RelativeLayout
                         android:id="@+id/rl2"
                         android:layout_width="match_parent"
@@ -366,7 +339,7 @@
                             android:textSize="@dimen/text_size_medium"/>
 
                         <TextView
-                            android:id="@+id/tvDuration"
+                            android:id="@+id/tvLocation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/tvTime"
@@ -377,65 +350,31 @@
                             android:text="Duration : 3 hours"
                             android:textColor="@color/text_color_black"
                             android:textSize="@dimen/text_size_medium"/>
-                    </RelativeLayout>
-                    <RelativeLayout
-                        android:id="@+id/rl3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/rl2"
-                        android:layout_marginLeft="@dimen/activity_margin_small"
-                        android:layout_marginRight="@dimen/activity_margin_small"
-                        android:layout_marginTop="@dimen/activity_margin_small">
-                        <ImageView
-                            android:id="@+id/ivFees"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@color/text_color_white"
-                            android:padding="@dimen/activity_margin_small"
-                            android:src="@drawable/ic_fee"/>
 
                         <TextView
-                            android:id="@+id/tvFees"
+                            android:id="@+id/tvCategory"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignBottom="@+id/ivFees"
-                            android:layout_alignTop="@+id/ivFees"
-                            android:layout_toEndOf="@+id/ivFees"
-                            android:layout_toRightOf="@+id/ivFees"
-                            android:background="@color/primary"
-                            android:gravity="center_vertical"
-                            android:paddingEnd="@dimen/activity_margin_small"
-                            android:paddingLeft="@dimen/activity_margin_small"
-                            android:paddingRight="@dimen/activity_margin_small"
-                            android:paddingStart="@dimen/activity_margin_small"
-                            android:text="FEES"
-                            android:textColor="@color/text_color_white"
-                            android:textSize="@dimen/text_size_large"
-                            android:textStyle="bold"/>
-
-
-                        <TextView
-                            android:id="@+id/tvCost"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/tvFees"
-                            android:layout_marginBottom="@dimen/activity_margin"
-                            android:layout_marginTop="@dimen/activity_margin_small"
-                            android:layout_toEndOf="@+id/ivFees"
-                            android:layout_toRightOf="@+id/ivFees"
+                            android:layout_below="@+id/tvLocation"
+                            android:layout_marginTop="@dimen/activity_margin_extra_small"
+                            android:layout_toEndOf="@+id/ivSchedule"
+                            android:layout_toRightOf="@+id/ivSchedule"
                             android:gravity="start"
-                            android:text="The Seminar costs Rs 10,000."
+                            android:text="Category: International Speakers"
                             android:textColor="@color/text_color_black"
                             android:textSize="@dimen/text_size_medium"/>
                     </RelativeLayout>
+
                 </RelativeLayout>
             </ScrollView>
+
             <LinearLayout
                 android:id="@+id/llButtons"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:weightSum="1.0">
+
                 <TextView
                     android:id="@+id/tvAddFavourite"
                     android:layout_width="0dp"
@@ -454,7 +393,7 @@
                     android:visibility="visible"/>
             </LinearLayout>
 
-        </RelativeLayout>
 
+        </RelativeLayout>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
