--- a/app/src/main/res/layout/activity_exhibitor_list.xml
+++ b/app/src/main/res/layout/activity_exhibitor_list.xml
@@ -41,6 +41,7 @@
                         android:src="@drawable/ic_back"
                         android:visibility="visible"/>
                     <TextView
+                        android:id="@+id/tvTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -55,13 +56,20 @@
                         android:textColor="@color/text_color_white"
                         android:textSize="@dimen/text_size_large"
                         android:textStyle="bold"/>
+                    <android.support.v7.widget.SearchView
+                        android:id="@+id/searchView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:gravity="end"
+                        android:searchIcon="@drawable/ic_search"/>
+
                     <ImageView
                         android:id="@+id/ivFilter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/searchView"
                         android:paddingBottom="@dimen/activity_margin_small"
                         android:paddingTop="@dimen/activity_margin_small"
                         android:src="@drawable/ic_filter"
@@ -105,7 +113,7 @@
                         android:layout_alignParentBottom="true"
                         android:fillViewport="true"
                         android:overScrollMode="never"
-                        android:scrollbarStyle="insideOverlay" />
+                        android:scrollbarStyle="insideOverlay"/>
                     <RelativeLayout
                         android:id="@+id/rlInit"
                         android:layout_width="match_parent"
@@ -124,7 +132,7 @@
                             android:padding="@dimen/edittext_padding"
                             android:text="@string/activity_exhibitor_list_text_no_exhibitor_found"
                             android:textSize="@dimen/text_size_large"
-                            android:visibility="gone" />
+                            android:visibility="gone"/>
                     </RelativeLayout>
                 </RelativeLayout>
             </android.support.v4.widget.SwipeRefreshLayout>
