--- a/app/src/main/res/layout/activity_exhibitor_list.xml
+++ b/app/src/main/res/layout/activity_exhibitor_list.xml
@@ -63,7 +63,6 @@
                         android:layout_alignParentRight="true"
                         android:gravity="end"
                         android:searchIcon="@drawable/ic_search"/>
-
                     <ImageView
                         android:id="@+id/ivFilter"
                         android:layout_width="wrap_content"
@@ -73,7 +72,7 @@
                         android:paddingBottom="@dimen/activity_margin_small"
                         android:paddingTop="@dimen/activity_margin_small"
                         android:src="@drawable/ic_filter"
-                        android:visibility="visible"/>
+                        android:visibility="gone"/>
                     <ImageView
                         android:id="@+id/ivSort"
                         android:layout_width="wrap_content"
@@ -88,7 +87,7 @@
                         android:paddingStart="0dp"
                         android:paddingTop="@dimen/activity_margin_small"
                         android:src="@drawable/ic_sort"
-                        android:visibility="visible"/>
+                        android:visibility="gone"/>
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
