--- a/app/src/main/res/layout/activity_programme_detail.xml
+++ b/app/src/main/res/layout/activity_programme_detail.xml
@@ -92,12 +92,25 @@
                     xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/activity_margin_small"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvProgrammeName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="@dimen/activity_margin_small"
+                        android:text="Dr.Rahul Jain"
+                        android:textColor="@color/app_text_color_dark"
+                        android:textSize="@dimen/text_size_extra_large"
+                        android:textStyle="bold"/>
 
                     <RelativeLayout
                         android:id="@+id/rl0"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvProgrammeName"
                         android:layout_margin="@dimen/activity_margin_small">
                         <RelativeLayout
                             android:id="@+id/rlImage"
@@ -443,6 +456,7 @@
                     android:layout_marginBottom="@dimen/activity_margin_small"
                     android:layout_marginLeft="@dimen/activity_margin_small"
                     android:layout_marginRight="@dimen/activity_margin_small"
+                    android:layout_marginTop="@dimen/activity_margin_small"
                     android:layout_weight="1.0"
                     android:background="@drawable/button_bg"
                     android:elevation="@dimen/button_elevation"
