--- a/app/src/main/res/layout/activity_programme_list.xml
+++ b/app/src/main/res/layout/activity_programme_list.xml
@@ -48,6 +48,7 @@
                         android:src="@drawable/ic_back"
                         android:visibility="visible"/>
                     <TextView
+                        android:id="@+id/tvTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -62,17 +63,24 @@
                         android:textColor="@color/text_color_white"
                         android:textSize="@dimen/text_size_large"
                         android:textStyle="bold"/>
+
+                    <android.support.v7.widget.SearchView
+                        android:id="@+id/searchView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:gravity="end"
+                        android:searchIcon="@drawable/ic_search"/>
                     <ImageView
                         android:id="@+id/ivFilter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/searchView"
                         android:paddingBottom="@dimen/activity_margin_small"
                         android:paddingTop="@dimen/activity_margin_small"
                         android:src="@drawable/ic_filter"
-                        android:visibility="visible"/>
+                        android:visibility="gone"/>
                     <ImageView
                         android:id="@+id/ivSort"
                         android:layout_width="wrap_content"
@@ -87,7 +95,7 @@
                         android:paddingStart="0dp"
                         android:paddingTop="@dimen/activity_margin_small"
                         android:src="@drawable/ic_sort"
-                        android:visibility="visible"/>
+                        android:visibility="gone"/>
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
 
