--- a/app/src/main/res/layout/activity_session_list.xml
+++ b/app/src/main/res/layout/activity_session_list.xml
@@ -45,6 +45,7 @@
                         android:visibility="visible"/>
 
                     <TextView
+                        android:id="@+id/tvTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -58,6 +59,38 @@
                         android:textSize="@dimen/text_size_large"
                         android:textStyle="bold"/>
 
+                    <android.support.v7.widget.SearchView
+                        android:id="@+id/searchView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:gravity="end"
+                        android:searchIcon="@drawable/ic_search"/>
+                    <ImageView
+                        android:id="@+id/ivFilter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/searchView"
+                        android:paddingBottom="@dimen/activity_margin_small"
+                        android:paddingTop="@dimen/activity_margin_small"
+                        android:src="@drawable/ic_filter"
+                        android:visibility="gone"/>
+                    <ImageView
+                        android:id="@+id/ivSort"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/ivFilter"
+                        android:layout_toStartOf="@+id/ivFilter"
+                        android:paddingBottom="@dimen/activity_margin_small"
+                        android:paddingEnd="@dimen/activity_margin_small"
+                        android:paddingLeft="0dp"
+                        android:paddingRight="@dimen/activity_margin_small"
+                        android:paddingStart="0dp"
+                        android:paddingTop="@dimen/activity_margin_small"
+                        android:src="@drawable/ic_sort"
+                        android:visibility="gone"/>
                 </RelativeLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
